k8s/urlservice-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlservice-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 8091
